test/tasty/pos/src-3/tastytest/DelayedInverse.scala
package tastytest

object DelayedInverse {
  object Internal {
    final class Impl(value: Any) extends DelayedInverse.Parent[Nothing]
  }
  sealed trait Parent[T]
}
